# sfinder

./: .gitignore  CMakeLists.txt  IndexWorker.cpp  IndexWorker.h  MainWindow.cpp  MainWindow.h  SeachWorker.cpp  SearchWorker.h  Trigram.cpp  Trigram.h  indexrunner.cpp  indexrunner.h  mainwindow.ui
test/: SnakeEater  b  p
test/folder/: inno  inw
